--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "symfony/config": "^7",
     "symfony/http-kernel": "^7",
     "symfony/yaml": "^7",
-    "symfony/dependency-injection": "^7"
+    "symfony/dependency-injection": "^7",
+    "symfony/finder": "^7.1"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
